# CppSocket

./: CMakeLists.txt
Client_test/: CMakeLists.txt
Server_test/: CMakeLists.txt
core/: CMakeLists.txt
core/sock/headers/: cli-sock_t.hpp  serv-sock_t.hpp
core/sock/src/: cli-sock_t.cpp  serv-sock_t.cpp
core/utilities/headers/: quick.hpp
core/utilities/src/: quick.cpp
tests/Client_test/: CMakeLists.txt  Client.cpp
tests/Server_test/: CMakeLists.txt  Server.cpp
utilities/: CMakeLists.txt
